--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
-    "name": "vue-component-deps",
+    "name": "vue-component-graph",
     "version": "1.0.0",
+    "description": "Visualize Vue component dependencies (ASCII & HTML)",
     "type": "module",
+    "main": "dist/index.js",
+    "types": "dist/types/index.d.ts",
     "bin": {
-        "vue-deps": "dist/index.js"
+        "vue-component-graph": "dist/cli.js"
     },
     "scripts": {
         "build": "tsc",
-        "start": "node dist/index.js"
+        "prepare": "npm run build"
     },
+    "files": ["dist"],
     "dependencies": {
-        "commander": "^10.0.0",
-        "fast-glob": "^3.2.7",
-        "parse5": "^6.0.1"
+        "commander": "^10.0.0"
     },
     "devDependencies": {
         "typescript": "^5.1.6",
-        "@types/node": "^18.0.0",
-        "@types/parse5": "^6.0.1"
-    }
+        "@types/node": "^18.0.0"
+    },
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/you/vue-component-graph.git"
+    },
+    "keywords": ["vue", "component", "graph", "ascii-tree", "html-tree"]
 }
