--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "skipLibCheck": true,
-        "types": ["node"]
+        "declaration": true,
+        "declarationDir": "dist/types"
     }
 }
