--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "skipDefaultLibCheck": true,
+        "emitDeclarationOnly": false,
         "target": "ES2020",
         "module": "ES2020",
         "moduleResolution": "node",
